fix alignment

--- a/css/main.css
+++ b/css/main.css
@@ -148,7 +148,6 @@ blockquote p {
 */
 
 .post-container {
-  display: inline-block;
   margin-bottom: 4rem;
 }
 
